--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,7 @@ div#container {
     font-family: Arial, Helvetica, sans-serif;
     /* > direct descendent */
     /* * every item */
+
     > * {
         border: 1px dotted blue;
         margin: 5px;
@@ -82,6 +83,41 @@ div#container {
                 float: right;
                 background-color: white;
                 padding: 10px;
+
+                h2 {
+                    color: red;
+                    border-bottom: 2px dotted red;
+                    text-transform: uppercase;
+                    font-weight: normal;
+                }
+
+                p {
+                    font-size: 12px;
+
+                    span {
+                        font-weight: bold;
+                        font-size: 110%;
+                    }
+                }
+
+                div.middle-nav {
+                    text-align: right;
+
+                    a {
+                    color: black;
+                    text-decoration: none;
+                    text-transform: uppercase;
+                    margin: 0 5px;
+
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                        span:after {
+                            content: "|";
+                            margin: 0 5px;
+                        }
+                    }
+                }
             }
         }
     }
