--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,10 @@ div#container {
     border: 1px solid red;
     min-height: 500px;
     /*width: 500px;*/
+    min-width: 900px;
     margin: 0 auto 0 auto;
     font-family: Arial, Helvetica, sans-serif;
+
     /* > direct descendent */
     /* * every item */
 
@@ -21,12 +23,13 @@ div#container {
 
         div.nav {
             text-align: right;
+            margin-right: 15px;
+            font-size: 12px;
 
             a {
                 color: black;
                 text-decoration: none;
                 text-transform: uppercase;
-                margin: 0 5px;
 
                 &:hover {
                     text-decoration: underline;
@@ -34,29 +37,33 @@ div#container {
 
                 img {
                     vertical-align: auto;
+                    /*vertical-align: auto;*/
                 }
             }
-
 
             span:after {
                 content: "|";
                 margin: 0 5px;
             }
 
+            /* This targets a nav element whose class is nav & also whose class is bottom-nav */
+
             &.bottom-nav {
+                font-size: 10px;
+
                 a {
                     text-transform: lowercase;
-
                 }
             }
         }
 
         div.brown-box {
-            background-color: rosybrown;
+            background-color: #bec4a1;
             border-radius: 15px;
             margin: 15px 10px 70px;
             padding: 20px;
             min-height: 500px;
+            position: relative;
 
             nav {
                 float: left;
@@ -69,6 +76,7 @@ div#container {
                     font-size: 11px;
                     text-transform: uppercase;
                     text-decoration: none;
+                    /*margin: 0 0 10px 0;*/
                     padding: 15px 0 15px 20px;
 
                     &:hover {
@@ -84,8 +92,12 @@ div#container {
                 background-color: white;
                 padding: 10px;
 
+                > img {
+                    width: 100%;
+                }
+
                 h2 {
-                    color: darkolivegreen;
+                    color: red;
                     border-bottom: 2px dotted red;
                     text-transform: uppercase;
                     font-weight: normal;
@@ -98,18 +110,20 @@ div#container {
                         font-weight: bold;
                         font-size: 110%;
                     }
+                }
 
-                    &.learn-more {
-                        text-align: right;
+                nav {
+                    text-align: right;
+                    font-size: 14px;
+                    font-weight: normal;
+                    text-transform: uppercase;
 
-                        a {
-                            color: red;
-                            text-decoration: none;
-                            font-size: 18px;
+                    a {
+                        color: red;
+                        text-decoration: none;
 
-                            &:hover {
-                                text-decoration: underline;
-                            }
+                        &:hover {
+                            text-decoration: underline;
                         }
                     }
                 }
@@ -118,14 +132,26 @@ div#container {
             div.clear-float {
                 clear: both;
             }
+
+            nav.login {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                margin: 0 0 70px 30px;
+
+                img {
+                    display: block;
+                    margin: 10px 0;
+                }
+            }
         }
     }
-}
 
-footer {
-    background-color: darkolivegreen;
-    color: white;
-    font-size: 10px;
-    text-align: center;
-    padding: 8px;
+    footer {
+        background-color: darkolivegreen;
+        color: white;
+        font-size: 10px;
+        text-align: center;
+        padding: 8px;
+    }
 }
