--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,4 @@
 div#container {
-    border: 1px solid red;
     min-height: 500px;
     /*width: 500px;*/
     min-width: 900px;
@@ -10,8 +9,7 @@ div#container {
     /* * every item */
 
     > * {
-        border: 1px dotted blue;
-        margin: 5px;
+        /* margin: 5px;*/
 
         > img {
             width: 100%;
@@ -23,7 +21,7 @@ div#container {
 
         div.nav {
             text-align: right;
-            margin-right: 15px;
+            margin: 5px 35px 0 0;
             font-size: 12px;
 
             a {
@@ -48,7 +46,8 @@ div#container {
             /* This targets a nav element whose class is nav & also whose class is bottom-nav */
 
             &.bottom-nav {
-                font-size: 10px;
+                font-size: 11px;
+                margin: 0 16px 8px 0;
 
                 a {
                     text-transform: lowercase;
@@ -61,22 +60,23 @@ div#container {
             border-radius: 15px;
             margin: 15px 10px 70px;
             padding: 20px;
-            min-height: 500px;
+            min-height: 650px;
             position: relative;
 
             nav.left-side {
                 float: left;
                 width: 25%;
+                padding: 0 30px 0 30px;
 
                 a {
-                    border-bottom: 1px solid black;
+                    border-bottom: 2px solid darkolivegreen;
                     display: block;
                     color: black;
-                    font-size: 11px;
+                    font-size: 12px;
                     text-transform: uppercase;
                     text-decoration: none;
                     /*margin: 0 0 10px 0;*/
-                    padding: 15px 0 15px 20px;
+                    padding: 14px 0 10px 15px;
 
                     &:hover {
                         background-color: saddlebrown;
@@ -86,24 +86,25 @@ div#container {
             }
 
             article {
-                width: 65%;
+                width: 60%;
                 float: right;
                 background-color: white;
-                padding: 10px;
+                padding: 14px;
 
                 > img {
                     width: 100%;
                 }
 
                 h2 {
-                    color: red;
+                    color: darkolivegreen;
                     border-bottom: 2px dotted red;
+                    font-size: 20px;
                     text-transform: uppercase;
                     font-weight: normal;
                 }
 
                 p {
-                    font-size: 12px;
+                    font-size: 14px;
 
                     span {
                         font-weight: bold;
@@ -136,11 +137,11 @@ div#container {
                 position: absolute;
                 bottom: 0;
                 left: 0;
-                margin: 0 0 70px 30px;
+                margin: 0 0 50px 30px;
 
                 img {
                     display: block;
-                    margin: 10px 0;
+                    width: 145%
                 }
             }
         }
